<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:title="@string/news"/>
        <item
            android:id="@+id/nav_depts"
            android:title="@string/departments" />
        <item
            android:id="@+id/nav_programs"
            android:title="@string/programs" />
        <item
            android:id="@+id/nav_students"
            android:title="@string/students" />
        <item
            android:id="@+id/nav_instructors"
            android:title="@string/instructors" />
        <item
            android:id="@+id/nav_courses"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_sections"
            android:title="@string/sections" />
    </group>
</menu>
