<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_department"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.admin.department.ShowDepartmentActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/namelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="wawawawa"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/namelabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emaillabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/namelabel" />

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="asd@asd.sad"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/emaillabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/namelabel" />

        <TextView
            android:id="@+id/idlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emaillabel" />

        <TextView
            android:id="@+id/id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="wawawawa"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/idlabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emaillabel" />

        <TextView
            android:id="@+id/proglabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idlabel" />

        <TextView
            android:id="@+id/program"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="wawawawa"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/proglabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idlabel" />

        <TextView
            android:id="@+id/yearlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/proglabel" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="3"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/yearlabel"
            app:layout_constraintTop_toBottomOf="@id/proglabel" />

        <TextView
            android:id="@+id/semesterlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/semester_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/year"
            app:layout_constraintTop_toBottomOf="@id/proglabel" />

        <TextView
            android:id="@+id/semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="3"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/semesterlabel"
            app:layout_constraintTop_toBottomOf="@id/proglabel" />

        <TextView
            android:id="@+id/cgpalabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/cgpa_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/semester"
            app:layout_constraintTop_toBottomOf="@id/proglabel" />

        <TextView
            android:id="@+id/cgpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="3"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/cgpalabel"
            app:layout_constraintTop_toBottomOf="@id/proglabel" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>